--- a/Bloop.GitHub/Bloop.GitHub.csproj
+++ b/Bloop.GitHub/Bloop.GitHub.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Bloop.Plugin" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Octokit" Version="0.32.0" />
   </ItemGroup>
 
   <ItemGroup>
