--- a/Bloop.GitHub/Bloop.GitHub.csproj
+++ b/Bloop.GitHub/Bloop.GitHub.csproj
@@ -22,4 +22,13 @@
     <None Remove="**\*.xaml" />
     <Compile Update="**\*.xaml.cs" SubType="Designer" DependentUpon="%(Filename)" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Images\repo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="plugin.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
