--- a/Bloop.GitHub/Bloop.GitHub.csproj
+++ b/Bloop.GitHub/Bloop.GitHub.csproj
@@ -42,6 +42,9 @@
     <None Update="Images\repo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Images\shell.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="plugin.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
